# LI2

./: .gitignore  CMakeLists.txt  README.md  macros.h
aula1/: polynomial.c  tarefa3.c
ficha1/: triangles  triangles.c
ficha2/: indicadores.c  triangles.c
ficha2/tarefa1/: principal.c
ficha2/tarefa3/: multiplication.c
ficha3/: CMakeLists.txt  desenhos.c  desenhos.h  principal.c  teste.c
ficha4/: arrays.c  arrays.h  main.c
